# AREE-co

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
app/: main.py
config/: demo_params.yaml
containers/: Dockerfile.python  Dockerfile.rnaseq
data/demo/: candidate_scores.tsv  harmonized_evidence.tsv  meta_analysis.tsv
data/mappings/: demo_identifier_map.tsv
data/reference/: identifier_hierarchy.md
docs/: adding-a-study.md  architecture.md  design.md  governance.md  index.qmd  interpreting-evidence.md  methods.md  roadmap.md  species-and-genomes.md  why-this-matters.md
modules/: README.md
notebooks/: README.md
registry/: study_registry.csv  study_registry_template.csv  study_template.yaml
registry/controlled_vocabularies/: assays.yaml  phenotypes.yaml  stressors.yaml
registry/studies/: CGIG_HEAT_RNASEQ_001.yaml  CGIG_HEAT_RNASEQ_002.yaml  CGIG_LARVAL_PROCESSED_001.yaml  CGIG_OA_METHYL_001.yaml  CGIG_PATH_PROTEO_001.yaml  CGIG_SALINITY_METAB_001.yaml
reports/: demo_report.md
reports/evidence_cards/: CGI_99999.md  NCBI:LOC105317001.md  NCBI:LOC105317002.md  NCBI:LOC105317003.md  NCBI:LOC105317004.md  glutathione_related_feature.md  unknown_metabolite_404.md
schemas/: evidence.schema.json  study.schema.json
src/aree/: __init__.py  cli.py  paths.py
tests/: test_aree_mvp.py
workflows/metabolomics/: main.nf  nextflow.config
workflows/methylation/: main.nf  nextflow.config
workflows/proteomics/: main.nf  nextflow.config
workflows/rnaseq/: main.nf  (+1 more)
(+16 files in other folders)
