[build-system]
requires = ["setuptools>=50"]
build-backend = "setuptools.build_meta"

[project]
name = "aree"
version = "0.1.0"
description = "Aquaculture Resilience Evidence Engine"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pandas>=1.1",
  "PyYAML>=5.3",
  "jsonschema>=3.2",
  "typer>=0.4",
]
authors = [{name = "AREE contributors"}]
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = ["pytest>=6"]
app = ["streamlit>=1.0"]

[project.scripts]
aree = "aree.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
