[metadata]
name = aree
version = 0.1.0
description = Aquaculture Resilience Evidence Engine
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = AREE contributors

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=1.1
    PyYAML>=5.3
    jsonschema>=3.2
    typer>=0.4

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    aree = aree.cli:app

[options.extras_require]
dev =
    pytest>=6
app =
    streamlit>=1.0

